sfSandBoxCode/force-app/main/default/objects/BSF_Production_Environment__c/BSF_Production_Environment__c.object-meta.xml
<CustomObject>
    <label>BSF Production Environment</label>
    <nameField>
        <label>BSF Production Environment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BSF Production Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>