sfSandBoxCode/force-app/main/default/objects/BSF_Production_Environment__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time(hrs e.g 0936)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>