sfSandBoxCode/force-app/main/default/objects/BSF_Production_Environment__c/fields/Weather_Condition__c.field-meta.xml
<CustomField>
    <fullName>Weather_Condition__c</fullName>
    <label>Weather Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rainy</fullName>
            </value>
            <value>
                <fullName>Cloudy</fullName>
            </value>
            <value>
                <fullName>Sunny</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>